--- a/admin/admin_index.html
+++ b/admin/admin_index.html
@@ -274,6 +274,16 @@
     }
 </style>
 <script>
+    myInterceptor();
+    function myInterceptor() {//没有用户cookie。跳转到登录页面
+        var admid=getCookie("admid");//用户id
+        if(admid){
+            return;
+        }else{
+            window.location.href = "admin_login.html";
+        }
+    }
+
     layui.config({
         version: '1520760931738' //为了更新 js 缓存，可忽略
     });
@@ -347,7 +357,7 @@
             table = layui.table //表格
 
             //向世界问个好
-            layer.msg('Hello World');
+            // layer.msg('Hello World');
 
             //执行一个 table 实例
             table.render({
@@ -397,7 +407,7 @@
             table = layui.table //表格
 
             //向世界问个好
-            layer.msg('Hello World');
+            // layer.msg('Hello World');
 
             //执行一个 table 实例
             table.render({
@@ -448,7 +458,7 @@
             table = layui.table //表格
 
             //向世界问个好
-            layer.msg('Hello World');
+            // layer.msg('Hello World');
 
             //执行一个 table 实例
             table.render({
