--- a/user/user_index.html
+++ b/user/user_index.html
@@ -17,15 +17,7 @@
         <span class="header_left_title" id="header_left_title">每日一报新闻</span>
     </div>
     <div class="header_center">
-        <ul id="cate">
-            <li class="cate"><span>商业</span></li>
-            <li class="cate"><span>智能</span></li>
-            <li class="cate"><span>设计</span></li>
-            <li class="cate"><span>时尚</span></li>
-            <li class="cate"><span>娱乐</span></li>
-            <li class="cate"><span>城市</span></li>
-            <li class="cate"><span>游戏</span></li>
-        </ul>
+        <ul id="cate"></ul>
     </div>
     <div class="header_right">
         <span class="header_right_app">APP</span>
@@ -216,6 +208,7 @@
 
     userInfo();
     showIndexArticle();
+    findAllCategory();
 
     $("#user_news").hide();
     $("#user_login").hide();
@@ -305,9 +298,9 @@
                 // console.log(data);
                 num=str.count;
                 aieList=str.data;
-                console.log(num);
-                console.log(aieList);
-                console.log(aieList.length);
+                // console.log(num);
+                // console.log(aieList);
+                // console.log(aieList.length);
                 // $("#show_article_comtxt_con").val("");
             },
             error:function (data) {
@@ -523,6 +516,45 @@
 
     });
 
+    /**
+     * 点击分类
+     **/
+    function classify(cgyid) {
+        setCookie("classifyID",cgyid,1);
+        window.location.href = "user_classify.html";
+    }
+
+    /**
+     * 显示类别
+     */
+    function findAllCategory() {
+        $.ajax({
+            url:"http://localhost:8080/Bibased/Category/findAll", //处理登录页面的路径
+            data:{  },
+            type:"GET", //提交方式
+            dataType:"TEXT", //返回数据的类型
+            //TEXT字符串 JSON返回JSON XML返回XML
+            success:function(data){ //回调函数 ,成功时返回的数据存在形参data里
+                if(data){
+                    var str=$.parseJSON(data);
+                    for (var i=0; i<str.length; i++){
+                        $("#cate").append("<li class='cate'><span onclick='classify(" + str[i].cgyid + ")'>" + str[i].cgyname + "</span></li>");
+                    }
+                }else{
+                    layer.open({
+                        title: '警告',
+                        content: '类别获取错误！'
+                    });
+                }
+            },
+            error:function (data) {
+                layer.open({
+                    title: '警告',
+                    content: '类别获取错误！'
+                });
+            }
+        });
+    }
     // });
 
 </script>
