--- a/user/user_classify.html
+++ b/user/user_classify.html
@@ -559,5 +559,15 @@
     }
     // });
 
+    $(document).ready(function () {
+        $(".cate").on({
+            mouseover : function(){
+                $(this).css("color","#ffc81f");
+            },mouseout : function(){
+                $(this).css("color","#777777");
+            }
+        }) ;
+    });
+
 </script>
 </html>
