--- a/user/user_info.html
+++ b/user/user_info.html
@@ -304,6 +304,7 @@
     }
 
 </style>
+
 <script type="text/javascript">
 
     myInterceptor();
@@ -680,5 +681,15 @@
         });
     }
 
+
+    $(document).ready(function () {
+        $(".cate").on({
+            mouseover : function(){
+                $(this).css("color","#ffc81f");
+            },mouseout : function(){
+                $(this).css("color","#777777");
+            }
+        }) ;
+    });
 </script>
 </html>
